# internal/controller/account/2fa_controller.go
@@ -45,3 +45,38 @@ func (c *sUser2FA) SetupTwoFactorAuth(ctx *gin.Context) {
 	}
 	response.SuccessResponse(ctx, codeResult, nil)
 }
+
+// User Verify Two Factor Authentication
+// @Summary      User Verify Two Factor Authentication
+// @Description  User Verify Two Factor Authentication
+// @Tags         account 2fa
+// @Accept       json
+// @Produce      json
+// @param Authorization header string true "Authorization token"
+// @Param        payload body model.TwoFactorVerificationAuthInput true "payload"
+// @Success      200  {object} 	response.ResponseData
+// @Failure      500  {object}  response.ErrorResponseData
+// @Router       /user/two-factor/verify [post]
+func (c *sUser2FA) VerifyTwoFactorAuth(ctx *gin.Context) {
+	var params model.TwoFactorVerificationAuthInput
+	if err := ctx.ShouldBindJSON(&params); err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthVerifyFailed, "Missing or invaild OTP")
+		return
+	}
+
+	// get UserId from uuid (token)
+	userId, err := context.GetUserIdFromUUID(ctx.Request.Context())
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthVerifyFailed, "UserId is not valid")
+		return
+	}
+	log.Println("UserId::VerifyTwoFactorAuth:: ", userId)
+	params.UserId = uint32(userId)
+
+	codeResult, err := service.UserLogin().VerifyTwoFactorAuth(ctx, &params)
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthVerifyFailed, err.Error())
+		return
+	}
+	response.SuccessResponse(ctx, codeResult, nil)
+}
