# internal/routers/user/user.router.go
@@ -27,5 +27,6 @@ func (ur *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 	{
 		userRouterPrivate.GET("/get_info", userController.Register)
 		userRouterPrivate.POST("/two-factor/setup", account.TwoFA.SetupTwoFactorAuth)
+		userRouterPrivate.POST("/two-factor/verify", account.TwoFA.VerifyTwoFactorAuth)
 	}
 }
